samples/_failures_safe/1761391796_1a6885_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f05a35de.c: In function ‘main’:
./samples/SAFE/__tmp_f05a35de.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f05a35de.c:153:5: error: expected declaration or statement at end of input
  153 |     if
      |     ^~
